# ehr_foundation_model_benchmark

./: .gitignore  =1.4.0  AGENTS.md  README.md  Zilin_tte_labels.ipynb  pyproject.toml
corebehrt/: main_create_data.py  main_pretrain.py  run_pretrain.py
corebehrt/common/: azure.py  config.py  initialize.py  loader.py  saver.py  setup.py  utils.py
corebehrt/configs/: create_data.yaml  pretrain.yaml
corebehrt/data/: batch.py  concept_loader.py  creators.py  dataset.py  filter.py  prepare_data.py  split.py  tokenizer.py  utils.py
corebehrt/data_fixes/: censor.py  handle.py  truncate.py
corebehrt/dataloader/: collate_fn.py
corebehrt/embeddings/: ehr.py
corebehrt/evaluation/: metrics.py  utils.py
corebehrt/model/: model.py
corebehrt/trainer/: copy_trainer.py  trainer.py  utils.py
src/ehr_foundation_model_benchmark/evaluations/: README.md  create_codes_to_remove.py  metrics.py  model_evaluation.py
src/ehr_foundation_model_benchmark/linear_prob/: finetune_with_linear_prob.py  run_linear_prob_with_few_shots.sh
src/ehr_foundation_model_benchmark/phenotypes/: README.md  ami_at_risk.json  cal_prev.py  cohort_creation.py  htn_at_risk.json  htn_case.json  ischemic_stroke_case.json  masld_at_risk.json  masld_case.json  osteoporosis_at_risk.json  pancreatic_cancer_at_risk.json  schizophrenia_at_risk.json  t2dm_at_risk.json
src/ehr_foundation_model_benchmark/tools/: README.md  check_conversion.py  compute_stats.py  convert_units.py  fix_meds_demographics.py  fix_units.py  mappings.py  merge_harmonized_labs_with_omop.py  stats.py
src/femr/: pretrain_motor_v2.py
(+353 files in other folders)
