[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr_foundation_model_benchmark"
dynamic = ["version"]

description = "Code repository for DBMI's EHR foundation model benchmarks."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "cehrbert"
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/reAIM-Lab/ehr_foundation_model_benchmark"

[project.optional-dependencies]
dev = [
    "pre-commit", "pytest", "pytest-cov", "pytest-subtests", "rootutils", "hypothesis", "black"
]